--- a/alanthilak/package.json
+++ b/alanthilak/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alanthilak",
-  "homepage": "https://rahul-sanjeev.github.io/AlanThilak-Payyannur/",
+  "homepage": "https://Rahul-Sanjeev.github.io/AlanThilak-Payyanur",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,13 +8,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
@@ -30,6 +28,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "react-router-dom": "^7.1.5",
     "vite": "^6.1.0"
